--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,18 @@
 {
   "name": "sphere-web-pair",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "angular": "1.2.16",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
-    "bootstrap-sass-official": "~3.1.0",
     "angular-resource": "1.2.15",
-    "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "underscore": "~1.6.0",
-    "angular-touch": "~1.2.16",
-    "angular-hammer": "~1.0.3"
+    "angular-hammer": "~1.0.3",
+    "Snap.svg": "~0.2.0",
+    "classie": "~1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
