--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "underscore": "~1.6.0",
     "angular-hammer": "~1.0.3",
     "Snap.svg": "~0.2.0",
-    "classie": "~1.0.1"
+    "classie": "~1.0.1",
+    "angular-ladda": "~0.1.6",
+    "ngDialog": "~0.1.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
